--- a/src/pages/WhatOurClientsSay.css
+++ b/src/pages/WhatOurClientsSay.css
@@ -16,7 +16,7 @@
   font-size: 3rem;
   color: #e6b450;
   margin-bottom: 5px;
-  margin-top: 20px;
+  margin-top: 52px;
   /* Increased space to fix overlap */
   text-align: center;
 }
